--- a/src/shared/popup.html
+++ b/src/shared/popup.html
@@ -10,6 +10,14 @@
   <div aria-live="polite">
     <p>Link copied in format:</p>
     <div id="format"></div>
+    
+    <fieldset id="formats">
+      <div id="button"><button class="apply-format" id="markdown">Markdown</button></div>
+      <div id="button"><button class="apply-format" id="dokuwiki">DokuWiki</button></div>
+      <div id="button"><button class="apply-format" id="jira">Jira</button></div>
+      <div id="button"><button class="apply-format" id="html">HTML</button></div>
+    </fieldset>
+
     <div id="button">
       <button class="options">Change format&#x2026;</button>
     </div>
