--- a/src/shared/options.html
+++ b/src/shared/options.html
@@ -11,12 +11,12 @@
       <fieldset id="formats">
         <legend>Link Format</legend>
         <div class="grid-formats">
-          <label><input type="radio" name="format" value="markdown" id="markdown"> Markdown</label>
-          <label><input type="radio" name="format" value="dokuwiki" id="dokuwiki"> DokuWiki</label>
-          <label><input type="radio" name="format" value="jira" id="jira"> Jira</label>
-          <label><input type="radio" name="format" value="html" id="html"> HTML</label>
-          <label><input type="radio" name="format" value="latex" id="latex"> LaTeX</label>
-          <label><input type="radio" name="format" value="xml" id="xml"> XML</label>
+          <label><input type="radio" name="format" value="Markdown" id="markdown">Markdown</label>
+          <label><input type="radio" name="format" value="Dokuwiki" id="dokuwiki">DokuWiki</label>
+          <label><input type="radio" name="format" value="Jira" id="jira">Jira</label>
+          <label><input type="radio" name="format" value="HTML" id="html">HTML</label>
+          <label><input type="radio" name="format" value="LaTeX" id="latex">LaTeX</label>
+          <label><input type="radio" name="format" value="XML" id="xml">XML</label>
         </div>
       </fieldset>
 
